@@ -10,6 +10,7 @@
     * add :displaypane and :dpclose
     * rename :filter to :queue and :Filter to :filter
     * add 'repeat' and 'shuffle'
+    * the service pane show/hide button is active on the media tab
 
 2009-03-28:
     * version 0.1
